tests/NormalTests/paczka1/small_fuzzy/44505065.err
Error in line 2: kPO S338 52,1
Error in line 8: S865 A797 91,8
Error in line 16: S865 S865 82,b
